<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp"
        android:background="@color/colorTabBlack">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
    >
        <com.livefree.merchant.util.TextviewReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/tv_name"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"/>

        <com.livefree.merchant.util.TextviewReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ABC"
                android:id="@+id/tv_cust_name"
                android:layout_below="@id/tv_name"
                android:textSize="16sp"
                android:textColor="@color/colorGrey"/>


        <com.livefree.merchant.util.TextviewReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contact_detail"
                android:textColor="@color/colorWhite"
                android:layout_toLeftOf="@id/ll_image"
                android:textSize="16sp"
                android:id="@+id/tv_contact"
                android:layout_marginRight="8dp"
        />
        <com.livefree.merchant.util.TextviewReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123456789"
                android:textColor="@color/colorGrey"
                android:layout_toLeftOf="@id/ll_image"
                android:textSize="16sp"
                android:id="@+id/tv_cust_no"
                android:layout_below="@id/tv_contact"
                android:layout_marginRight="22dp"
        />
        <com.livefree.merchant.util.TextviewReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:id="@+id/tv_age"
                android:layout_below="@id/tv_cust_name"
        />
        <com.livefree.merchant.util.TextviewReg
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textColor="@color/colorGrey"
                android:textSize="16sp"
                android:id="@+id/tv_cust_age"
                android:layout_below="@id/tv_age"

        />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/ll_image"
        >
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_more"
                    android:id="@+id/iv_edit"
            />
        </LinearLayout>
    </RelativeLayout>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGrey"></View>

    <com.livefree.merchant.util.TextviewReg
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="Assigned"
            android:id="@+id/tv_assigned"
            android:gravity="right"
            android:padding="8dp"
            android:textColor="@color/colorLightGreen"/>
</LinearLayout>
