<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundBlack"
        android:padding="16dp"
>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/solid_border_radius_corner_grey"
            android:orientation="vertical"
            android:focusableInTouchMode="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/banner_background"
                android:gravity="center"
                android:orientation="vertical">

            <com.livefree.merchant.util.TextviewReg
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/add_table"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>
            <com.livefree.merchant.util.TextviewReg
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/detail"
                    android:textColor="@color/colorWhite"
                    android:textSize="14pt"/>
        </LinearLayout>


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/table1"
                android:padding="8dp"
                android:textColorHint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"
                    android:imeOptions="actionNext"
                    android:id="@+id/et_table"
                    android:inputType="text"
                    android:nextFocusDown="@id/et_chair"
                    android:textColorHint="@color/colorGrey"/>
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dashed_line"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
        >

            <com.livefree.merchant.util.TextviewReg
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorGrey"
                    android:textSize="16sp"
                    android:id="@+id/et_chair"
                    android:padding="6dp"
                    android:text="@string/chair"
            />

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingRight="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/green_bg">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_remove"/>
                <com.livefree.merchant.util.TextviewReg
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorWhite"
                        android:text="0"
                        android:id="@+id/tv_quantity_chair"
                        android:textSize="16sp"
                />
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add"
                />
            </LinearLayout>


        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:textColorHint="@color/colorWhite">

            <com.livefree.merchant.util.TextviewReg
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:id="@+id/et_server"
                    android:hint="@string/servers"
                    android:textColorHint="@color/colorGrey"
                    android:nextFocusDown="@id/ed_city"
                    android:background="@drawable/dashed_line"
                    android:drawableRight="@drawable/ic_arrow_down"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp"/>


        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/tv_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/tv_save_btn"
                    android:padding="16dp"
                    android:text="Cancel"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"/>


            <TextView
                    android:id="@+id/tv_save_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="16dp"
                    android:text="Save"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>